--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ joblib==1.4.2
 numpy==1.26.4
 opencv-python==4.9.0.80
 PyWavelets==1.6.0
+Pillow==10.2.0
 Flask==2.3.2
 Bootstrap_Flask==2.3.3
 Flask-Bootstrap==3.3.7.1
