--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-joblib==1.4.2
-numpy==1.26.4
-opencv-python==4.9.0.80
-PyWavelets==1.6.0
-Pillow==10.2.0
-Flask==2.3.2
-Bootstrap_Flask==2.3.3
-Flask-Bootstrap==3.3.7.1
-Flask-WTF==1.2.1
-WTForms==3.0.1
-scikit-learn==1.3.0
-numpy>=1.24,<2.0
+Flask==2.3.3
+Werkzeug==2.3.7
 gunicorn==21.2.0
-python-dotenv==1.0.1
+numpy==1.24.4
+Pillow==10.3.0
+scikit-learn==1.3.2
+joblib==1.3.2
+opencv-python==4.8.1.78
+PyWavelets==1.4.1 
+tensorflow==2.13.0
