--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 Flask==2.3.3
-Werkzeug==2.3.7
 gunicorn==21.2.0
-numpy==1.24.4
-Pillow==10.3.0
+
 scikit-learn==1.3.2
 joblib==1.3.2
+numpy>=1.24,<2.0
 opencv-python==4.8.1.78
-PyWavelets==1.4.1 
-tensorflow==2.13.0
+PyWavelets==1.4.1
+Pillow==10.3.0
